# ossp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  oservice.hexpat
include/ossp/: api.h  buffer.h  help.h  komihash.h  ossp.h  serialize.h
src/: api.cpp  buffer.cpp  endian.inl  help.cpp  memory.h  ossp.cpp  serialize.cpp
test/: create_tests.cpp.inc  memory_validation.cpp.inc  ruby_test_data.cpp.inc  test_data.cpp.inc  test_data_02.cpp.inc  test_data_03.cpp.inc  test_data_04.cpp.inc  test_data_05.cpp.inc  test_ossp_01.cpp  test_ossp_02.cpp  test_ossp_03.cpp  test_ossp_04.cpp  test_ossp_05.cpp  test_ossp_06.cpp  test_ossp_deep_diff.cpp
test/lib/: .gitignore  mruby.lib
